plugins/mermaid/src/test/resources/intention/nbsp/flowchart.mermaid
flowchart
  A<error descr="Space symbol won't be rendered">     </error>B<error descr="Space symbol won't be rendered">     </error>C --> D